--- a/src/main/java/com/napier/sem/.gitignore
+++ b/src/main/java/com/napier/sem/.gitignore
@@ -1,28 +1,14 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
+# Ignore Maven build output
 target/
+
+# But keep the Maven wrapper JAR (needed for builds)
+!.mvn/wrapper/maven-wrapper.jar
+
+# Allow target folders inside source directories (for IDE/test tooling)
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+# Ignore Maven-generated metadata and backup files
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -31,6 +17,71 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-.mvn/wrapper/maven-wrapper.jar
 
+### IntelliJ IDEA ###
+# Project-specific config files
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+# Legacy IntelliJ project files
+*.iws
+*.iml
+*.ipr
+
+### Eclipse ###
+# Eclipse-generated build artifacts and settings
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### NetBeans ###
+# NetBeans project metadata and build output
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+# But keep build folders inside source directories
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+# VS Code workspace settings
+.vscode/
+
+### Mac OS ###
+# macOS file system metadata
+.DS_Store
+
+# Java compiled class files
+*.class
+
+# Application log files
+*.log
+
+# BlueJ IDE context files
+*.ctxt
+
+# Temporary files for J2ME development
+.mtj.tmp/
+
+# Ignore packaged artifacts (archives and deployables)
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# JVM crash logs
+hs_err_pid*
+
+# Redundant IntelliJ folder (already covered above)
 .idea/
